@@ -1,10 +1,9 @@
 package addsynth.energy.gameplay.machines.circuit_fabricator;
 
-import addsynth.core.gui.IngredientWidget;
 import addsynth.core.gui.util.GuiUtil;
 import addsynth.core.gui.widgets.WidgetUtil;
+import addsynth.core.gui.widgets.item.IngredientWidgetGroup;
 import addsynth.core.util.StringUtil;
-import addsynth.core.util.time.TimeConstants;
 import addsynth.energy.ADDSynthEnergy;
 import addsynth.energy.gameplay.EnergyItems;
 import addsynth.energy.gameplay.NetworkHandler;
@@ -41,15 +40,14 @@ public final class CircuitFabricatorGui extends GuiEnergyBase<TileCircuitFabrica
   private static final int up_arrow_texture_y = 217;
   private static final int[] arrow_draw_x = {77, 95, 113, 131};
   private static final int[] arrow_draw_y = {65, 113};
-  private static final int[] ingredient_draw_x = {76, 94, 112, 130};
-  private static final int[] ingredient_draw_y = {48, 122};
+  private static final int[] ingredient_draw_x = {76, 94, 112, 130, 76, 94, 112, 130};
+  private static final int[] ingredient_draw_y = {48, 48, 48, 48, 122, 122, 122, 122};
   
-  private static IngredientWidget[] recipe_ingredient;
-  private static int tick;
+  private static final IngredientWidgetGroup recipe_ingredients = new IngredientWidgetGroup(8);
   
   public CircuitFabricatorGui(final CircuitFabricatorContainer container, PlayerInventory player_inventory, ITextComponent title){
     super(221, 233, container, player_inventory, title, gui_texture);
-    tile.updateGui();
+    tile.updateGui(); // update displayed recipe, in case player opens another Circuit Fabricator
   }
 
   private final class CircuitButton extends AbstractButton {
@@ -98,28 +96,15 @@ public final class CircuitFabricatorGui extends GuiEnergyBase<TileCircuitFabrica
         }
       }
     }
-    
-    tile.updateGui();
   }
 
   public static final void updateRecipeDisplay(final ItemStack[][] recipe){
-    int i;
-    int length = recipe.length;
-    recipe_ingredient = new IngredientWidget[length];
-    for(i = 0; i < length; i++){
-      recipe_ingredient[i] = new IngredientWidget(recipe[i]);
-    }
+    recipe_ingredients.setRecipe(recipe);
   }
 
   @Override
   public final void tick(){
-    tick += 1; // TODO: another spot for a tick handler.
-    if(tick >= TimeConstants.ticks_per_second){
-      for(IngredientWidget w : recipe_ingredient){
-        w.update();
-      }
-      tick = 0;
-    }
+    recipe_ingredients.tick();
   }
 
   @Override
@@ -127,39 +112,38 @@ public final class CircuitFabricatorGui extends GuiEnergyBase<TileCircuitFabrica
     guiUtil.draw_background_texture();
     work_progress_bar.draw(this, tile);
     // draw arrows and ingredients
-    if(recipe_ingredient != null){
-      if(recipe_ingredient.length >= 1){
-        guiUtil.draw(arrow_draw_x[0], arrow_draw_y[0], down_arrow_texture_x, down_arrow_texture_y, 14, 8, 28, 16);
-        recipe_ingredient[0].draw(guiLeft + ingredient_draw_x[0], guiTop + ingredient_draw_y[0]);
-      }
-      if(recipe_ingredient.length >= 2){
-        guiUtil.draw(arrow_draw_x[1], arrow_draw_y[0], down_arrow_texture_x, down_arrow_texture_y, 14, 8, 28, 16);
-        recipe_ingredient[1].draw(guiLeft + ingredient_draw_x[1], guiTop + ingredient_draw_y[0]);
-      }
-      if(recipe_ingredient.length >= 3){
-        guiUtil.draw(arrow_draw_x[2], arrow_draw_y[0], down_arrow_texture_x, down_arrow_texture_y, 14, 8, 28, 16);
-        recipe_ingredient[2].draw(guiLeft + ingredient_draw_x[2], guiTop + ingredient_draw_y[0]);
-      }
-      if(recipe_ingredient.length >= 4){
-        guiUtil.draw(arrow_draw_x[3], arrow_draw_y[0], down_arrow_texture_x, down_arrow_texture_y, 14, 8, 28, 16);
-        recipe_ingredient[3].draw(guiLeft + ingredient_draw_x[3], guiTop + ingredient_draw_y[0]);
-      }
-      if(recipe_ingredient.length >= 5){
-        guiUtil.draw(arrow_draw_x[0], arrow_draw_y[1],   up_arrow_texture_x,   up_arrow_texture_y, 14, 8, 28, 16);
-        recipe_ingredient[4].draw(guiLeft + ingredient_draw_x[0], guiTop + ingredient_draw_y[1]);
-      }
-      if(recipe_ingredient.length >= 6){
-        guiUtil.draw(arrow_draw_x[1], arrow_draw_y[1],   up_arrow_texture_x,   up_arrow_texture_y, 14, 8, 28, 16);
-        recipe_ingredient[5].draw(guiLeft + ingredient_draw_x[1], guiTop + ingredient_draw_y[1]);
-      }
-      if(recipe_ingredient.length >= 7){
-        guiUtil.draw(arrow_draw_x[2], arrow_draw_y[1],   up_arrow_texture_x,   up_arrow_texture_y, 14, 8, 28, 16);
-        recipe_ingredient[6].draw(guiLeft + ingredient_draw_x[2], guiTop + ingredient_draw_y[1]);
-      }
-      if(recipe_ingredient.length >= 8){
-        guiUtil.draw(arrow_draw_x[3], arrow_draw_y[1],   up_arrow_texture_x,   up_arrow_texture_y, 14, 8, 28, 16);
-        recipe_ingredient[7].draw(guiLeft + ingredient_draw_x[3], guiTop + ingredient_draw_y[1]);
-      }
+    final int length = recipe_ingredients.getLength();
+    if(length >= 1){
+      guiUtil.draw(arrow_draw_x[0], arrow_draw_y[0], down_arrow_texture_x, down_arrow_texture_y, 14, 8, 28, 16);
+      recipe_ingredients.drawIngredient(0, guiLeft + ingredient_draw_x[0], guiTop + ingredient_draw_y[0]);
+    }
+    if(length >= 2){
+      guiUtil.draw(arrow_draw_x[1], arrow_draw_y[0], down_arrow_texture_x, down_arrow_texture_y, 14, 8, 28, 16);
+      recipe_ingredients.drawIngredient(1, guiLeft + ingredient_draw_x[1], guiTop + ingredient_draw_y[1]);
+    }
+    if(length >= 3){
+      guiUtil.draw(arrow_draw_x[2], arrow_draw_y[0], down_arrow_texture_x, down_arrow_texture_y, 14, 8, 28, 16);
+      recipe_ingredients.drawIngredient(2, guiLeft + ingredient_draw_x[2], guiTop + ingredient_draw_y[2]);
+    }
+    if(length >= 4){
+      guiUtil.draw(arrow_draw_x[3], arrow_draw_y[0], down_arrow_texture_x, down_arrow_texture_y, 14, 8, 28, 16);
+      recipe_ingredients.drawIngredient(3, guiLeft + ingredient_draw_x[3], guiTop + ingredient_draw_y[3]);
+    }
+    if(length >= 5){
+      guiUtil.draw(arrow_draw_x[0], arrow_draw_y[1],   up_arrow_texture_x,   up_arrow_texture_y, 14, 8, 28, 16);
+      recipe_ingredients.drawIngredient(4, guiLeft + ingredient_draw_x[4], guiTop + ingredient_draw_y[4]);
+    }
+    if(length >= 6){
+      guiUtil.draw(arrow_draw_x[1], arrow_draw_y[1],   up_arrow_texture_x,   up_arrow_texture_y, 14, 8, 28, 16);
+      recipe_ingredients.drawIngredient(5, guiLeft + ingredient_draw_x[5], guiTop + ingredient_draw_y[5]);
+    }
+    if(length >= 7){
+      guiUtil.draw(arrow_draw_x[2], arrow_draw_y[1],   up_arrow_texture_x,   up_arrow_texture_y, 14, 8, 28, 16);
+      recipe_ingredients.drawIngredient(6, guiLeft + ingredient_draw_x[6], guiTop + ingredient_draw_y[6]);
+    }
+    if(length >= 8){
+      guiUtil.draw(arrow_draw_x[3], arrow_draw_y[1],   up_arrow_texture_x,   up_arrow_texture_y, 14, 8, 28, 16);
+      recipe_ingredients.drawIngredient(7, guiLeft + ingredient_draw_x[7], guiTop + ingredient_draw_y[7]);
     }
   }
 
@@ -178,32 +162,7 @@ public final class CircuitFabricatorGui extends GuiEnergyBase<TileCircuitFabrica
   protected final void renderHoveredToolTip(int mouseX, int mouseY){
     super.renderHoveredToolTip(mouseX, mouseY);
     // draw ingredient tooltips
-    if(recipe_ingredient != null){
-      if(recipe_ingredient.length >= 1){
-        recipe_ingredient[0].drawTooltip(this, guiLeft + ingredient_draw_x[0], guiTop + ingredient_draw_y[0], mouseX, mouseY);
-      }
-      if(recipe_ingredient.length >= 2){
-        recipe_ingredient[1].drawTooltip(this, guiLeft + ingredient_draw_x[1], guiTop + ingredient_draw_y[0], mouseX, mouseY);
-      }
-      if(recipe_ingredient.length >= 3){
-        recipe_ingredient[2].drawTooltip(this, guiLeft + ingredient_draw_x[2], guiTop + ingredient_draw_y[0], mouseX, mouseY);
-      }
-      if(recipe_ingredient.length >= 4){
-        recipe_ingredient[3].drawTooltip(this, guiLeft + ingredient_draw_x[3], guiTop + ingredient_draw_y[0], mouseX, mouseY);
-      }
-      if(recipe_ingredient.length >= 5){
-        recipe_ingredient[4].drawTooltip(this, guiLeft + ingredient_draw_x[0], guiTop + ingredient_draw_y[1], mouseX, mouseY);
-      }
-      if(recipe_ingredient.length >= 6){
-        recipe_ingredient[5].drawTooltip(this, guiLeft + ingredient_draw_x[1], guiTop + ingredient_draw_y[1], mouseX, mouseY);
-      }
-      if(recipe_ingredient.length >= 7){
-        recipe_ingredient[6].drawTooltip(this, guiLeft + ingredient_draw_x[2], guiTop + ingredient_draw_y[1], mouseX, mouseY);
-      }
-      if(recipe_ingredient.length >= 8){
-        recipe_ingredient[7].drawTooltip(this, guiLeft + ingredient_draw_x[3], guiTop + ingredient_draw_y[1], mouseX, mouseY);
-      }
-    }
+    recipe_ingredients.drawTooltips(this, guiLeft, ingredient_draw_x, guiTop, ingredient_draw_y, mouseX, mouseY);
   }
 
 }
